# manim-combinable

./: README.md  pyproject.toml
.github/workflows/: build.yml  release.yml
docs/: comparisons.md  progress_tracker.md
src/manim_combinable/: __init__.py  apply_rate.py  change_decimal_to_value.py  changing_decimal.py  color.py  fade_in.py  fade_out.py  fade_to_color.py  fill_color.py  fill_opacity.py  flatten.py  helper.py  indicate.py  move_along_path.py  move_to.py  opacity.py  rotate.py  scale.py  scale_in_place.py  shift.py  shrink_to_center.py  stroke_color.py  stroke_opacity.py
tests/: comparisons.py  readme.py
